// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`momentum detection recognizes double swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -782,
          8,
          0,
        ],
        "axisVelocity": Array [
          -1.6915201419407737,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -27,
          "deltaY": 0,
          "timeStamp": 3111.6450000263285,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        21,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "canceled": true,
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -952,
          8,
          0,
        ],
        "axisVelocity": Array [
          -0.682340725381047,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -2,
          "deltaY": 0,
          "timeStamp": 3317.0500000123866,
        },
        "isEndingSoon": false,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_CANCEL",
      },
      "range": Array [
        21,
        33,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -952,
          8,
          0,
        ],
        "axisVelocity": Array [
          -0.682340725381047,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -2,
          "deltaY": 0,
          "timeStamp": 3317.0500000123866,
        },
        "isEndingSoon": false,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        33,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1281,
          -2,
          0,
        ],
        "axisVelocity": Array [
          -2.6581998086919674,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -43,
          "deltaY": 0,
          "timeStamp": 3678.780000016559,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        33,
        56,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1755,
          -2,
          0,
        ],
        "axisVelocity": Array [
          -0.039928129363731614,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 4477.8150000202,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        56,
        102,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1755,
          -2,
          0,
        ],
        "axisVelocity": Array [
          -0.039928129363731614,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 4477.8150000202,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        33,
        102,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe down - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -23,
          -2342,
          0,
        ],
        "axisVelocity": Array [
          0,
          -11.235294117647058,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -188,
          "timeStamp": 29003,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        19,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -23,
          -5953,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04081632653061224,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 30302,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        19,
        95,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -23,
          -5953,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04081632653061224,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 30302,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        95,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe down 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7,
          -1643,
          0,
        ],
        "axisVelocity": Array [
          0,
          -2.8484848484848486,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -45,
          "timeStamp": 6926,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        41,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7,
          -2134,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04878048780487805,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 7709.000000000001,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        41,
        87,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7,
          -2134,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04878048780487805,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 7709.000000000001,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        87,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left (mouse) - Firefox 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          610,
          0,
          0,
        ],
        "axisVelocity": Array [
          0.835820895522388,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 13,
          "deltaY": 0,
          "timeStamp": 21542,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        27,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          740,
          0,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 22026,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        27,
        54,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          740,
          0,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 22026,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        54,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          2524,
          -8,
          0,
        ],
        "axisVelocity": Array [
          14.058823529411764,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 235,
          "deltaY": 0,
          "timeStamp": 146329,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        17,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7237,
          -8,
          0,
        ],
        "axisVelocity": Array [
          0.039603960396039604,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 147746,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        17,
        100,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7237,
          -8,
          0,
        ],
        "axisVelocity": Array [
          0.039603960396039604,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 147746,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        100,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          2138,
          -15,
          0,
        ],
        "axisVelocity": Array [
          4.382352941176471,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 72,
          "deltaY": 0,
          "timeStamp": 2009,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        29,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          3001,
          -15,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 2925.0000000000005,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        29,
        82,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          3001,
          -15,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 2925.0000000000005,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        82,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe right - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -15,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.03963731853433476,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 64035.86500001256,
        },
        "isEndingSoon": true,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        9,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -15,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.03963731853433476,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 64035.86500001256,
        },
        "isEndingSoon": true,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        9,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -3191,
          0,
          0,
        ],
        "axisVelocity": Array [
          -20.823763587311635,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -332,
          "deltaY": 0,
          "timeStamp": 64845.06500000134,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        10,
        33,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -6336,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0400060009027491,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 65929.5800000109,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        33,
        96,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -6336,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0400060009027491,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 65929.5800000109,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        10,
        96,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1247,
          0,
          0,
        ],
        "axisVelocity": Array [
          -2.370280330906471,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -37,
          "deltaY": 0,
          "timeStamp": 1792.395000011311,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        25,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1634,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0398585023158581,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 2458.8000000076136,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        25,
        63,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1634,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0398585023158581,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 2458.8000000076136,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        63,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe up - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -38,
          2735,
          0,
        ],
        "axisVelocity": Array [
          0,
          11.676470588235293,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 195,
          "timeStamp": 101790,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        21,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -38,
          6526,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.0392156862745098,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 103107,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        21,
        98,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -38,
          6526,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.0392156862745098,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 103107,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        98,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe up 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -70,
          2197,
          0,
        ],
        "axisVelocity": Array [
          0,
          6.7164179104477615,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 110,
          "timeStamp": 86430,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        23,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -70,
          3774,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.04,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 87480,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        23,
        84,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -70,
          3774,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.04,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 87480,
        },
        "isEndingSoon": true,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        84,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
